corrected yml file for the workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,14 @@
       runs-on: ubuntu-latest
 
       steps:
+        - name: Set up Python 3.8
+          uses: actions/setup-python@v5
+          with:
+              python-version: 3.8
+
+        - name: Install Bandit
+          shell: bash
+          run: pip install bandit
+
         - name: Bandit
           run: bandit -r .
