corrected yml file for the workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@
           run: pip install bandit
 
         - name: Bandit
-          run: bandit -r ../../main.py
+          run: bandit -r ../main.py
