corrected yml file for the workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@
           run: cd ..
 
         - name: Go back
-          run: cd ..
+          run: ls
 
         - name: Bandit
           run: bandit -r .
