corrected yml file for the workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@
           run: pip install bandit
 
         - name: target
-          run:  git config --get remote.origin.url
+          run:  git rev-parse HEAD
 
         - name: Bandit
           run: bandit -r $(target)
