--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,12 @@
           shell: bash
           run: pip install bandit
 
-        - uses: actions/checkout@v2
-
-        - name: Security check - Bandit
-          uses: ./
+        - uses: shundor/bandit-action@v1
           with:
-            python_version: 3.8
-            project_path: .
-            ignore_failure: true
+              path: "."
+              level: high
+              confidence: high
+              exit_zero: true
 
         #- name: Bandit
         #  run: bandit -r ../../../.
